--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="cinzachumbo">#837F7F</color>
     <color name="azul_celeste">#C6026795</color>
     <color name="linen">#BEBEBE</color>
+    <color name="light_blue_500">#03A9F4</color>
+    <color name="light_grey">#A0A0A0</color>
 </resources>
