--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,12 +15,9 @@
     </style>
 
 
-    <style name="Theme.Appi3.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="Theme.Appi3.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="Theme.Appi3.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
-    <style name="Theme.Appi3.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" /> -->
 </resources>
