--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,6 +37,7 @@
         <item name="android:textColor">@color/linen</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:textAlignment">center</item>
         <item name="layout_constraintStart_toStartOf">parent</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="layout_constraintEnd_toEndOf">parent</item>
@@ -81,13 +82,15 @@
         <item name="android:textColor">@color/linen</item>
     </style>
 
-    <style name="btnCadastrar" parent="">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="layout_constraintStart_toStartOf">parent</item>
-        <item name="layout_constraintBottom_toBottomOf">parent</item>
-        <item name="layout_constraintEnd_toEndOf">parent</item>
-        <item name="layout_constraintTop_toTopOf">parent</item>
+    <style name="btnCadastrar" parent="btn">
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="imgBotao">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
 
