--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cornflaw"
+    android:layout_gravity="center"
+    android:background="@drawable/gradient_backgroud"
     tools:context=".teste">
 
 
@@ -22,27 +23,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.121" />
 
-    <Button
-        android:id="@+id/button"
-        style="@style/btnCadastrar"
-        android:text="Cadastrar"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
-
-    <EditText
-        android:id="@+id/inputNome"
-        style="@style/txtCadastro"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.342" />
-
     <EditText
         android:id="@+id/inputQuantidade"
         style="@style/txtQuantidade"
@@ -52,7 +32,71 @@
         app:layout_constraintHorizontal_bias="0.841"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.443" />
+        app:layout_constraintVertical_bias="0.402" />
+
+    <EditText
+        android:id="@+id/inputNome"
+        style="@style/txtCadastro"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.776"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.301" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="319dp"
+        android:layout_height="159dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673">
+
+        <TextView
+            android:id="@+id/textView3"
+            style="@style/textCadastro"
+            android:layout_width="match_parent"
+            android:text="Sexo:"
+            android:textSize="30sp" />
+
+        <RadioButton
+            android:id="@+id/radioMasc"
+            style="@style/rbSexo"
+            android:text="@string/sexo_m" />
+
+        <RadioButton
+            android:id="@+id/radioFemin"
+            style="@style/rbSexo"
+            android:text="@string/sexo_f" />
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/button"
+        style="@style/btnCadastrar"
+        android:text="@string/txtBtnCadastrar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.857" />
+
+    <TextView
+        android:id="@+id/txtNome"
+        style="@style/textCadastro"
+        android:text="Nome:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303"
+        tools:layout_conversion_absoluteHeight="35dp"
+        tools:layout_conversion_absoluteWidth="76dp"
+        tools:layout_marginTop="20dp" />
 
     <TextView
         android:id="@+id/txtQuantidade"
@@ -65,50 +109,8 @@
         app:layout_constraintHorizontal_bias="0.149"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.416"
+        app:layout_constraintVertical_bias="0.409"
         tools:layout_marginTop="40dp" />
-
-    <TextView
-        android:id="@+id/txtNome"
-        style="@style/textCadastro"
-        android:text="Nome:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.116"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.323"
-        tools:layout_conversion_absoluteHeight="35dp"
-        tools:layout_conversion_absoluteWidth="76dp"
-        tools:layout_marginTop="20dp" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="319dp"
-        android:layout_height="159dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721">
-
-        <TextView
-            android:id="@+id/textView3"
-            style="@style/textCadastro"
-            android:text="Sexo:"
-            android:textSize="30sp" />
-
-        <RadioButton
-            android:id="@+id/radioMasc"
-            style="@style/rbSexo"
-            android:text="@string/sexo_m"/>
-
-        <RadioButton
-            android:id="@+id/radioFemin"
-            style="@style/rbSexo"
-            android:text="@string/sexo_f"/>
-
-    </RadioGroup>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
