--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cornflaw"
+    android:background="@drawable/gradient_backgroud"
     tools:context=".menu">
 
 
@@ -23,28 +23,21 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         style="@style/cartao"
-        android:layout_marginTop="260dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.172"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.447">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/constrain">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="111dp"
-                android:layout_height="80dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_menu_camera" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView3"
+            style="@style/imgBotao"
+            app:srcCompat="@drawable/ic_menu_camera" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView4"
         style="@style/cartao"
         app:cardBackgroundColor="@color/deep_orange"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.745" />
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
@@ -74,8 +68,7 @@
         app:layout_constraintHorizontal_bias="0.827"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.449" />
-
+        app:layout_constraintVertical_bias="0.447" />
 
     <androidx.cardview.widget.CardView
         style="@style/img_user"
@@ -87,12 +80,18 @@
         app:layout_constraintVertical_bias="0.04" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            style="@style/constrain">
+            style="@style/constrain"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/imgAvatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
