--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
 
     <style name="Theme.Appi3.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="colorPrimary">@color/greenhill</item>
+        <item name="colorPrimary">@color/barro</item>
     </style>
 
 
