--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,9 @@
     <color name="greenzone">#009688</color>
     <color name="deep_orange">#FF5722</color>
     <color name="pikachu">#CDDC39</color>
+    <color name="golden">#897b42</color>
     <color name="red_blood">#611700</color>
+    <color name="barro">#c65533</color>
     <color name="blue_marine">#0E1B42</color>
     <color name="greenhill">#076C6C</color>
 </resources>
