--- a/app/src/main/res/drawable/botao_menu_sair.xml
+++ b/app/src/main/res/drawable/botao_menu_sair.xml
@@ -3,11 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp"></corners>
-
-            <gradient android:angle="90"
-                android:startColor="#B264FF"
-                android:endColor="#63BCAA"
-                android:type="linear"/>
+            <solid
+                android:color="@color/pikachu"/>
         </shape>
     </item>
 </selector>
