--- a/app/src/main/res/drawable/btn_background1.xml
+++ b/app/src/main/res/drawable/btn_background1.xml
@@ -3,11 +3,12 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp"></corners>
-
-            <gradient android:angle="90"
-                android:startColor="#B264FF"
-                android:endColor="#63BCAA"
+            <gradient android:angle="180"
+                android:startColor="#8cbfe6"
+                android:centerColor="#8cbfe6"
+                android:endColor="#8cbfe6"
                 android:type="linear"/>
+
         </shape>
     </item>
 </selector>
