--- a/app/src/main/res/drawable/input_corner_radius.xml
+++ b/app/src/main/res/drawable/input_corner_radius.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/linen"/>
+            <solid android:color="@color/white"/>
             <corners android:radius="20dp"/>
             <stroke android:color="@color/black"
-                android:width="2dp"/>
+                android:width="1dp"/>
         </shape>
     </item>
 
