--- a/app/src/main/res/layout/activity_cad_produto.xml
+++ b/app/src/main/res/layout/activity_cad_produto.xml
@@ -7,161 +7,201 @@
     android:background="@drawable/gradient_backgroud"
     tools:context=".cad_produto">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/icone_login"
+        app:layout_constraintBottom_toTopOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_card"
+        style="@style/ContainerComponents"
+        android:layout_width="350dp"
+        android:layout_height="530dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.534" />
 
     <TextView
         android:id="@+id/textView4"
         style="@style/textCadastro"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:text="@string/cad_produto"
         android:textAlignment="center"
-        android:textColor="@color/linen"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toTopOf="@+id/view_card" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         style="@style/txtInput"
-        android:layout_width="209dp"
+        android:layout_width="210dp"
         android:layout_height="38dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Cod"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.001" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine2"
         style="@style/txtInput"
-        android:layout_width="177dp"
-        android:layout_height="144dp"
+        android:layout_width="190dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="151dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Insira a descrição do seu produto aqui."
         android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textCod"
         style="@style/textCadastro"
+        android:layout_marginTop="37dp"
         android:text="@string/codProduto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
+        app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255" />
+        app:layout_constraintTop_toTopOf="@+id/view_card"
+        app:layout_constraintVertical_bias="0.079" />
 
     <TextView
         android:id="@+id/textDesc"
         style="@style/textCadastro"
         android:text="@string/descProduto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.128"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toTopOf="@+id/view_card"
+        app:layout_constraintVertical_bias="0.634" />
 
     <TextView
         android:id="@+id/textNome"
         style="@style/textCadastro"
         android:text="@string/nomeProduto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.34" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toTopOf="@+id/view_card"
+        app:layout_constraintVertical_bias="0.276" />
 
     <TextView
         android:id="@+id/textValor"
         style="@style/textCadastro"
         android:text="@string/valorProduto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.507" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toTopOf="@+id/view_card"
+        app:layout_constraintVertical_bias="0.517" />
 
     <TextView
         android:id="@+id/textQtd"
         style="@style/textCadastro"
         android:text="@string/qtdProduto"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.135"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.423" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toTopOf="@+id/view_card"
+        app:layout_constraintVertical_bias="0.402" />
 
     <EditText
         android:id="@+id/editTextTextPersonName6"
         style="@style/txtInput"
-        android:layout_width="143dp"
+        android:layout_width="140dp"
         android:layout_height="38dp"
+        android:layout_marginStart="199dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="R$ 00,00"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
+        app:layout_constraintVertical_bias="0.007" />
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
         style="@style/txtInput"
-        android:layout_width="137dp"
+        android:layout_width="140dp"
         android:layout_height="38dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="213dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="Qtd"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
         app:layout_constraintStart_toEndOf="@+id/textQtd"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
         style="@style/txtInput"
-        android:layout_width="204dp"
+        android:layout_width="210dp"
         android:layout_height="38dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="146dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
         app:layout_constraintStart_toEndOf="@+id/textNome"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        style="@style/btnCadastrar"
-        android:layout_marginTop="40dp"
+        style="@style/btnCadastrar1"
+        android:layout_marginTop="20dp"
         android:text="@string/txtBtnCadastrar"
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
