--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -9,13 +9,27 @@
     tools:context=".teste">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/icone_login"
+        app:layout_constraintBottom_toTopOf="@+id/view_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/view_card"
         style="@style/ContainerComponents"
         android:layout_width="350dp"
         android:layout_height="390dp"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="170dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -23,7 +37,6 @@
         style="@style/textCadastro"
         android:layout_marginTop="4dp"
         android:text="@string/inserir_produto"
-        android:textColor="@color/linen"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/inputNome"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
@@ -35,43 +48,42 @@
     <EditText
         android:id="@+id/inputQuantidade"
         style="@style/txtQuantidade"
-        android:layout_width="310dp"
-        android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="90dp"
         android:autofillHints="true"
         android:drawableRight="@drawable/ic_olho"
-        android:hint="********"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
-        tools:layout_editor_absoluteX="50dp" />
+        android:hint="Senha"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
+        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
 
     <EditText
         android:id="@+id/inputNome"
         style="@style/txtCadastro"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:hint="Nome"
         app:layout_constraintBottom_toTopOf="@+id/inputEmail"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
+        app:layout_constraintStart_toStartOf="@+id/view_card"
         app:layout_constraintTop_toTopOf="@+id/view_card"
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/inputEmail"
         style="@style/txtCadastro"
-        android:layout_width="310dp"
-        android:layout_height="49dp"
         android:drawableRight="@drawable/ic_email"
         android:hint="E-mail"
+        app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
         app:layout_constraintStart_toStartOf="@+id/view_card"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintTop_toTopOf="@+id/view_card" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        style="@style/btnCadastrar"
+        style="@style/btnCadastrar1"
         android:text="@string/txtBtnCadastrar"
         app:layout_constraintBottom_toBottomOf="@+id/view_card"
         app:layout_constraintEnd_toEndOf="@+id/view_card"
