--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
     <style name="pi3">
         <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/linen</item>
     </style>
+
 
     <style name="btn">
         <item name="android:textColor">@color/linen</item>
@@ -15,6 +17,7 @@
         <item name="android:layout_width">135dp</item>
         <item name="android:layout_height">70dp</item>
     </style>
+
 
     <style name="txtInput">
         <item name="android:background">@drawable/input_corner_radius</item>
@@ -25,26 +28,29 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
+
     <style name="txtCadastro">
         <item name="android:layout_height">50dp</item>
         <item name="android:background">@drawable/input_corner_radius</item>
         <item name="android:ems">10</item>
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">310dp</item>
         <item name="android:inputType">textPersonName</item>
     </style>
 
+
     <style name="textCadastro">
         <item name="android:textSize">26dp</item>
-        <item name="android:textColor">@color/linen</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
 
+
     <style name="txtQuantidade">
         <item name="android:layout_height">50dp</item>
-        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_width">310dp</item>
         <item name="android:background">@drawable/input_corner_radius</item>
         <item name="android:ems">10</item>
         <item name="android:paddingStart">10dp</item>
@@ -61,12 +67,13 @@
         <item name="cardElevation">10dp</item>
     </style>
 
+
     <style name="img_user">
         <item name="android:layout_width">60dp</item>
         <item name="android:layout_height">60dp</item>
         <item name="cardCornerRadius">30dp</item>
-
     </style>
+
 
     <style name="constrain">
         <item name="layout_constraintStart_toStartOf">parent</item>
@@ -75,12 +82,14 @@
         <item name="layout_constraintTop_toTopOf">parent</item>
     </style>
 
+
     <style name="rbSexo">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/linen</item>
     </style>
+
 
     <style name="btnCadastrar" parent="btn">
         <item name="android:textStyle">normal</item>
@@ -90,21 +99,58 @@
         <item name="android:background">@drawable/btn_backgroud</item>
     </style>
 
+
+    <style name="btnCadastrar1" parent="btn">
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/btn_background1</item>
+    </style>
+
+
     <style name="imgBotao">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
 
-    <style name="cardBackgroud">
-        <item name="android:layout_width">337dp</item>
-        <item name="android:layout_height">345dp</item>
-        <item name="android:background">@drawable/card_backgroud</item>
-    </style>
 
     <style name="ContainerComponents">
         <item name="android:layout_width">500dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/card_backgroud</item>
+    </style>
+
+
+    <style name="botao_menu_add">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/botao_menu_add</item>
+        <item name="srcCompat">@drawable/ic_add</item>
+    </style>
+
+
+    <style name="botao_menu_edit_account">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/botao_menu_edit_account</item>
+        <item name="srcCompat">@drawable/ic_edit_account</item>
+    </style>
+
+
+    <style name="botao_menu_report">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/botao_menu_report</item>
+        <item name="srcCompat">@drawable/ic_report</item>
+    </style>
+
+
+    <style name="botao_menu_sair">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:background">@drawable/botao_menu_sair</item>
+        <item name="srcCompat">@drawable/ic_sair</item>
     </style>
 
 
